--- a/style.css
+++ b/style.css
@@ -1,35 +1,125 @@
-.main {
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
+
+
+body {
+    background-color: #f9f9f9;
+    padding: 0;
+    margin: 0;
+    font-family: 'DotGothic16', sans-serif;
+
+    --grid-height: 120px;
+
+}
+
+button {
+    font-family: 'DotGothic16', sans-serif;
+}
+
+.banner {
     display: flex;
-    column-gap: 5rem;
     justify-content: center;
     align-items: center;
-    padding: 20% 0;
+    font-size: 6rem;
+    padding: 3rem 0;
+    margin: 0;
+    background-color: #262626;
+    color: #f9f9f9;
 }
 
-.gameboard {
+.main {
+    margin: 1rem auto;
     display: grid;
-    height: 30%;
-    width: 30%;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: calc(var(--grid-height)*1.5) calc(var(--grid-height)*3);
+    grid-template-rows: 1fr 3fr;
+    column-gap: calc(var(--grid-height) / 2);
+    row-gap: 1rem;
+    justify-content: center;
+    padding-top: 1%;
+    
 }
 
-.gameboard > .grid {
-    border: 1px solid black;
-    padding: 1rem;
+.annoucement {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+    background-color: #262626;
+    border: 2px solid #262626;
+    color: #f9f9f9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    font-size: 1.5rem;
 }
 
 .panel  {
+    grid-column: 1 / 2;
+    background-color: #fafafa;
     display: flex;
     flex-direction: column;
-    row-gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    row-gap: 2rem;
+    border-radius: 10px;
+    border: #262626 solid 2px;
 }
 
-.reset {
+.opponentchoice, .player1, .player2, .controlbtn{
+    min-width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 0.5rem;
+}
+
+button.start, .opponentchoice > button {
+    background-color: #262626;
+    font-size: 1.2rem;
+    color: #f9f9f9;
+    border-style: none;
+    border: #262626 2px solid;
+    border-radius: 10px;
+    text-align: center;
+    width: 80%;
+    height: 3rem;
+}
+
+button.reset, button.restart {
+    background-color: #262626;
+    font-size: 1rem;
+    color: #f9f9f9;
+    border-style: none;
+    border-radius: 10px;
+    text-align: center;
+    width: 45%;
+    height: 3rem;
+}
+
+
+button.symbol {
+    background-color: #262626;
+    font-size: 1.2rem;
+    color: #f9f9f9;
+    border-style: none;
+    border: #262626 2px solid;
+    border-radius: 10px;
+    text-align: center;
+    padding: 5% 7%;
+}
+
+.player1>.name, .player2>.name {
+    width: 40%;
+    text-align: center;
+}
+
+.reset, .restart {
     display: none;
 }
 
-.aiOpponent {
+button:disabled {
+    background-color: #f9f9f9;
+    color: #262626;
+}
+.aiopponent {
     display: none;
 }
 
@@ -38,6 +128,24 @@
     column-gap: 0.5rem;
 }
 
-.gameboard > .annoucement {
-    grid-column: 1 / 4;
+.gameboard {
+    grid-column: 2 / 3;
+    display: grid;
+    background-color: #262626;
+    height: calc(var(--grid-height)*3);
+    width: calc(var(--grid-height)*3);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    border-radius: 10px;
+    border: #262626 2px solid;
+    gap: 2px;
+    overflow: hidden;
+}
+
+.gameboard > .grid {
+    background-color: #f9f9f9;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(var(--grid-height) - 40px);
 }
